--- a/porfolio.html
+++ b/porfolio.html
@@ -11,7 +11,7 @@
     <h1><i><b>Samir Hossain</b></i></h1>
     <img src="portfolio1.jpg" width="200px">
     <br>
-    <h3><i>Software Devolper!!!!</i></h3>
+    <h3><i>Software Devolper</i></h3>
     <div>
         <img src="GitHub-Mark/PNG/GitHub-Mark-32px.png" alt="mark">
         <a href="https://github.com/somir1">My Github</a>
