--- a/porfolio.html
+++ b/porfolio.html
@@ -33,7 +33,7 @@
                 <th><B>Python</B></th>
                 <th><B>JavaScrpt</B></th>
                 <th><B>Database</B></th>
-                <th><B>Concept</B></th>
+                <th><B>Concepts</B></th>
             </tr>
         </thead>
         <tbody>
